[package]
name = "topk"
version = "0.1.0"
authors = ["Tsumida <tsumida@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ="2.3.4"
rand = "0.7.3"
serde = {version="1.0.105", features=["derive"]}
serde_json = "1.0.0"
criterion = "0.3.1"
rayon = "1.3.0"
tempdir = "0.3"

# [profile.release]
# debug = true